comiendo montando topologia red con 3 clases

--- a/src/image_processing_full.ipynb
+++ b/src/image_processing_full.ipynb
@@ -514,7 +514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Divinding photos by classes"
+    "### Dividing photos by classes-> para utilizarlo, tendría que hacer con train test split anterior carpetas\n"
    ]
   },
   {
