--- a/src/image_processing_part-X_y.ipynb
+++ b/src/image_processing_part-X_y.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f14ad91f280>"
+       "<matplotlib.image.AxesImage at 0x7f4c44b0b130>"
       ]
      },
      "execution_count": 13,
@@ -410,136 +410,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pictures_part=pictures[pictures['dish_ord']==0].append(pictures[pictures['dish_ord']==1]).append(pictures[pictures['dish_ord']==2])"
+    "pictures_part=pictures[pictures['dish_ord']==0]\n",
+    "for i in range(0,10):\n",
+    "    pictures_part=pictures_part.append(pictures[pictures['dish_ord']==(i+1)])\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>path</th>\n",
-       "      <th>dish</th>\n",
-       "      <th>dish_ord</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>95000</th>\n",
-       "      <td>../input/images/apple_pie/1147371.jpg</td>\n",
-       "      <td>apple_pie</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95001</th>\n",
-       "      <td>../input/images/apple_pie/202741.jpg</td>\n",
-       "      <td>apple_pie</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95002</th>\n",
-       "      <td>../input/images/apple_pie/3198655.jpg</td>\n",
-       "      <td>apple_pie</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95003</th>\n",
-       "      <td>../input/images/apple_pie/1343307.jpg</td>\n",
-       "      <td>apple_pie</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95004</th>\n",
-       "      <td>../input/images/apple_pie/591398.jpg</td>\n",
-       "      <td>apple_pie</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>90995</th>\n",
-       "      <td>../input/images/baklava/3742847.jpg</td>\n",
-       "      <td>baklava</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>90996</th>\n",
-       "      <td>../input/images/baklava/3300382.jpg</td>\n",
-       "      <td>baklava</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>90997</th>\n",
-       "      <td>../input/images/baklava/2984698.jpg</td>\n",
-       "      <td>baklava</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>90998</th>\n",
-       "      <td>../input/images/baklava/3140803.jpg</td>\n",
-       "      <td>baklava</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>90999</th>\n",
-       "      <td>../input/images/baklava/605083.jpg</td>\n",
-       "      <td>baklava</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3000 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                        path       dish  dish_ord\n",
-       "95000  ../input/images/apple_pie/1147371.jpg  apple_pie         0\n",
-       "95001   ../input/images/apple_pie/202741.jpg  apple_pie         0\n",
-       "95002  ../input/images/apple_pie/3198655.jpg  apple_pie         0\n",
-       "95003  ../input/images/apple_pie/1343307.jpg  apple_pie         0\n",
-       "95004   ../input/images/apple_pie/591398.jpg  apple_pie         0\n",
-       "...                                      ...        ...       ...\n",
-       "90995    ../input/images/baklava/3742847.jpg    baklava         2\n",
-       "90996    ../input/images/baklava/3300382.jpg    baklava         2\n",
-       "90997    ../input/images/baklava/2984698.jpg    baklava         2\n",
-       "90998    ../input/images/baklava/3140803.jpg    baklava         2\n",
-       "90999     ../input/images/baklava/605083.jpg    baklava         2\n",
-       "\n",
-       "[3000 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pictures_part"
+    "n_clases=len(pictures_part['dish_ord'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_pictures=len(pictures_part['dish_ord'])"
    ]
   },
   {
@@ -551,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -7585,7 +7477,7 @@
        " ...]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7614,7 +7506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7623,7 +7515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7632,23 +7524,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3000, 32, 32, 1)"
+       "(11000, 32, 32, 1)"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7659,7 +7544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7668,16 +7553,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3000, 3)"
+       "(11000, 11)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7688,19 +7573,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -7711,16 +7589,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "steps=3\n",
     "n_features=1\n",
     "batch=256\n",
-    "n_clases=3\n",
     "epocas=1\n",
-    "input_shape=(3000,32,32,1)\n",
     "#opt = tf.keras.optimizers.Adam(learning_rate=0.1)\n",
     "#optimizer = tf.train.AdamOptimizer(0.001)\n",
     "opt = SGD(lr=1e-2, momentum=0.9, decay=1e-2 / epocas)\n",
@@ -7729,43 +7605,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_10\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_28 (Conv2D)           (None, 30, 30, 32)        320       \n",
+      "conv2d (Conv2D)              (None, 30, 30, 32)        320       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_19 (MaxPooling (None, 15, 15, 32)        0         \n",
+      "max_pooling2d (MaxPooling2D) (None, 15, 15, 32)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_36 (Dropout)         (None, 15, 15, 32)        0         \n",
+      "dropout (Dropout)            (None, 15, 15, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_29 (Conv2D)           (None, 13, 13, 64)        18496     \n",
+      "conv2d_1 (Conv2D)            (None, 13, 13, 64)        18496     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_20 (MaxPooling (None, 6, 6, 64)          0         \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 6, 6, 64)          0         \n",
       "_________________________________________________________________\n",
-      "dropout_37 (Dropout)         (None, 6, 6, 64)          0         \n",
+      "dropout_1 (Dropout)          (None, 6, 6, 64)          0         \n",
       "_________________________________________________________________\n",
-      "conv2d_30 (Conv2D)           (None, 4, 4, 128)         73856     \n",
+      "conv2d_2 (Conv2D)            (None, 4, 4, 128)         73856     \n",
       "_________________________________________________________________\n",
-      "dropout_38 (Dropout)         (None, 4, 4, 128)         0         \n",
+      "dropout_2 (Dropout)          (None, 4, 4, 128)         0         \n",
       "_________________________________________________________________\n",
-      "flatten_9 (Flatten)          (None, 2048)              0         \n",
+      "flatten (Flatten)            (None, 2048)              0         \n",
       "_________________________________________________________________\n",
-      "dense_18 (Dense)             (None, 128)               262272    \n",
+      "dense (Dense)                (None, 128)               262272    \n",
       "_________________________________________________________________\n",
-      "dropout_39 (Dropout)         (None, 128)               0         \n",
+      "dropout_3 (Dropout)          (None, 128)               0         \n",
       "_________________________________________________________________\n",
-      "dense_19 (Dense)             (None, 3)                 387       \n",
+      "dense_1 (Dense)              (None, 11)                1419      \n",
       "=================================================================\n",
-      "Total params: 355,331\n",
-      "Trainable params: 355,331\n",
+      "Total params: 356,363\n",
+      "Trainable params: 356,363\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -7805,7 +7681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7818,7 +7694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7827,16 +7703,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.3245833218097687]"
+       "[0.09647727012634277]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
