modelo simplificado salvado

--- a/src/image_processing_partialV1_imgdata.ipynb
+++ b/src/image_processing_partialV1_imgdata.ipynb
@@ -5885,6 +5885,234 @@
     "                    verbose=1,\n",
     "                    callbacks=[earlystopping])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save_weights('../output/models/part_V1.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'loss': [1.2839964628219604,\n",
+       "  1.238911747932434,\n",
+       "  1.2008647918701172,\n",
+       "  1.1590590476989746,\n",
+       "  1.1130403280258179,\n",
+       "  1.0784335136413574,\n",
+       "  1.081563115119934,\n",
+       "  1.0487861633300781,\n",
+       "  1.0243936777114868,\n",
+       "  0.9877824187278748,\n",
+       "  0.9954501390457153,\n",
+       "  0.9500429630279541,\n",
+       "  0.9554775357246399,\n",
+       "  0.9294676780700684,\n",
+       "  0.9079868793487549,\n",
+       "  0.8908897638320923,\n",
+       "  0.8946076035499573,\n",
+       "  0.8522358536720276,\n",
+       "  0.8404219150543213,\n",
+       "  0.8228273987770081,\n",
+       "  0.7875999808311462,\n",
+       "  0.7844461798667908,\n",
+       "  0.7754523158073425,\n",
+       "  0.7399876117706299,\n",
+       "  0.7195568084716797,\n",
+       "  0.6835688948631287,\n",
+       "  0.6715580224990845,\n",
+       "  0.6492276787757874,\n",
+       "  0.6236082911491394,\n",
+       "  0.6015914082527161,\n",
+       "  0.5801581740379333,\n",
+       "  0.5814375281333923,\n",
+       "  0.5647527575492859,\n",
+       "  0.5071595311164856,\n",
+       "  0.48833638429641724,\n",
+       "  0.46679773926734924,\n",
+       "  0.4448287785053253,\n",
+       "  0.4111853539943695,\n",
+       "  0.40696027874946594,\n",
+       "  0.41074761748313904,\n",
+       "  0.37148571014404297,\n",
+       "  0.35947051644325256,\n",
+       "  0.36060577630996704,\n",
+       "  0.3358738422393799,\n",
+       "  0.3031551241874695,\n",
+       "  0.2889787554740906,\n",
+       "  0.27065616846084595,\n",
+       "  0.26479706168174744,\n",
+       "  0.2573535144329071,\n",
+       "  0.2582169473171234],\n",
+       " 'accuracy': [0.46130791306495667,\n",
+       "  0.4869209825992584,\n",
+       "  0.5166212320327759,\n",
+       "  0.5386921167373657,\n",
+       "  0.5498637557029724,\n",
+       "  0.559673011302948,\n",
+       "  0.5683923959732056,\n",
+       "  0.5754768252372742,\n",
+       "  0.6008174419403076,\n",
+       "  0.6119890809059143,\n",
+       "  0.6043596863746643,\n",
+       "  0.629700243473053,\n",
+       "  0.6122615933418274,\n",
+       "  0.636512279510498,\n",
+       "  0.6444141864776611,\n",
+       "  0.6555858254432678,\n",
+       "  0.6588555574417114,\n",
+       "  0.6692098379135132,\n",
+       "  0.6757493019104004,\n",
+       "  0.6831062436103821,\n",
+       "  0.6994550228118896,\n",
+       "  0.7002725005149841,\n",
+       "  0.7016348838806152,\n",
+       "  0.7117165923118591,\n",
+       "  0.7321525812149048,\n",
+       "  0.7419618368148804,\n",
+       "  0.7509536743164062,\n",
+       "  0.7490463256835938,\n",
+       "  0.7681198716163635,\n",
+       "  0.7732970118522644,\n",
+       "  0.7787466049194336,\n",
+       "  0.779291570186615,\n",
+       "  0.7899182438850403,\n",
+       "  0.811716616153717,\n",
+       "  0.8217983841896057,\n",
+       "  0.828610360622406,\n",
+       "  0.8310626745223999,\n",
+       "  0.8386920690536499,\n",
+       "  0.84931880235672,\n",
+       "  0.8509536981582642,\n",
+       "  0.8626703023910522,\n",
+       "  0.8667575120925903,\n",
+       "  0.8645776510238647,\n",
+       "  0.8765667676925659,\n",
+       "  0.8874659538269043,\n",
+       "  0.9008174538612366,\n",
+       "  0.9040871858596802,\n",
+       "  0.9062670469284058,\n",
+       "  0.9084468483924866,\n",
+       "  0.9103541970252991],\n",
+       " 'val_loss': [1.2725162506103516,\n",
+       "  1.197452425956726,\n",
+       "  1.2171591520309448,\n",
+       "  1.0985286235809326,\n",
+       "  1.0556747913360596,\n",
+       "  1.0766971111297607,\n",
+       "  1.0794837474822998,\n",
+       "  1.00468909740448,\n",
+       "  0.986627459526062,\n",
+       "  0.9820690155029297,\n",
+       "  0.9869934320449829,\n",
+       "  1.0093590021133423,\n",
+       "  0.9706202149391174,\n",
+       "  0.9267798066139221,\n",
+       "  0.9683307409286499,\n",
+       "  0.9164600372314453,\n",
+       "  0.9209428429603577,\n",
+       "  0.8895894289016724,\n",
+       "  0.9607952833175659,\n",
+       "  0.9007328152656555,\n",
+       "  0.8645655512809753,\n",
+       "  0.910721480846405,\n",
+       "  0.8787239193916321,\n",
+       "  0.909450113773346,\n",
+       "  0.8993554711341858,\n",
+       "  0.8711353540420532,\n",
+       "  0.8644710183143616,\n",
+       "  0.8507566452026367,\n",
+       "  0.8983814716339111,\n",
+       "  0.8842115998268127,\n",
+       "  0.8805424571037292,\n",
+       "  0.9521718621253967,\n",
+       "  0.8908393383026123,\n",
+       "  0.9232812523841858,\n",
+       "  0.9076632857322693,\n",
+       "  0.9005686640739441,\n",
+       "  0.8871288895606995,\n",
+       "  0.9730439186096191,\n",
+       "  0.9339836835861206,\n",
+       "  0.9392585754394531,\n",
+       "  0.950924813747406,\n",
+       "  0.9531815648078918,\n",
+       "  0.9945244193077087,\n",
+       "  1.0350091457366943,\n",
+       "  1.0425385236740112,\n",
+       "  1.0447431802749634,\n",
+       "  1.076596736907959,\n",
+       "  1.0257681608200073,\n",
+       "  1.035138487815857,\n",
+       "  1.0109490156173706],\n",
+       " 'val_accuracy': [0.4952000081539154,\n",
+       "  0.5175999999046326,\n",
+       "  0.4975999891757965,\n",
+       "  0.5687999725341797,\n",
+       "  0.5807999968528748,\n",
+       "  0.5551999807357788,\n",
+       "  0.553600013256073,\n",
+       "  0.6055999994277954,\n",
+       "  0.6151999831199646,\n",
+       "  0.6168000102043152,\n",
+       "  0.6032000184059143,\n",
+       "  0.5848000049591064,\n",
+       "  0.6007999777793884,\n",
+       "  0.63919997215271,\n",
+       "  0.6039999723434448,\n",
+       "  0.6439999938011169,\n",
+       "  0.628000020980835,\n",
+       "  0.6600000262260437,\n",
+       "  0.6136000156402588,\n",
+       "  0.6543999910354614,\n",
+       "  0.6672000288963318,\n",
+       "  0.6384000182151794,\n",
+       "  0.6543999910354614,\n",
+       "  0.6488000154495239,\n",
+       "  0.6456000208854675,\n",
+       "  0.6664000153541565,\n",
+       "  0.6743999719619751,\n",
+       "  0.6848000288009644,\n",
+       "  0.6647999882698059,\n",
+       "  0.6679999828338623,\n",
+       "  0.676800012588501,\n",
+       "  0.6583999991416931,\n",
+       "  0.6759999990463257,\n",
+       "  0.6711999773979187,\n",
+       "  0.6672000288963318,\n",
+       "  0.6895999908447266,\n",
+       "  0.6895999908447266,\n",
+       "  0.6743999719619751,\n",
+       "  0.6887999773025513,\n",
+       "  0.6967999935150146,\n",
+       "  0.6863999962806702,\n",
+       "  0.6944000124931335,\n",
+       "  0.6656000018119812,\n",
+       "  0.6808000206947327,\n",
+       "  0.6904000043869019,\n",
+       "  0.6967999935150146,\n",
+       "  0.6751999855041504,\n",
+       "  0.6815999746322632,\n",
+       "  0.6967999935150146,\n",
+       "  0.6840000152587891]}"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "history.history"
+   ]
   }
  ],
  "metadata": {
