--- a/src/image_processing_partialV1.ipynb
+++ b/src/image_processing_partialV1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import glob\n",
     "import os\n",
     "import random\n",
-    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "from shutil import copy\n",
     "from shutil import copytree, rmtree\n",
     "import tensorflow as tf\n",
@@ -6067,6 +6068,18 @@
     "\n",
     "\n",
     "plt.savefig('../output/graphV1.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm = confusion_matrix(train_generator,test_generator)\n",
+    "print(cm)\n",
+    "\n",
+    "sns.heatmap(cm,annot=True)"
    ]
   },
   {
