matrices confusion y arreglos varios

--- a/src/image_processing_partialV2.ipynb
+++ b/src/image_processing_partialV2.ipynb
@@ -20,7 +20,6 @@
     "from PIL import Image\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import tensorflow as tf\n",
     "from keras.losses import categorical_crossentropy\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from tensorflow.keras.regularizers import l2\n",
@@ -86,22 +85,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'lobster_roll_sandwich'"
+       "['lobster_roll_sandwich',\n",
+       " 'beet_salad',\n",
+       " 'red_velvet_cake',\n",
+       " 'falafel',\n",
+       " 'paella',\n",
+       " 'french_onion_soup',\n",
+       " 'caesar_salad',\n",
+       " 'chicken_quesadilla',\n",
+       " 'beef_carpaccio',\n",
+       " 'macaroni_and_cheese',\n",
+       " 'lobster_bisque',\n",
+       " 'ice_cream',\n",
+       " 'omelette',\n",
+       " 'frozen_yogurt',\n",
+       " 'panna_cotta',\n",
+       " 'beignets',\n",
+       " 'ravioli',\n",
+       " 'tacos',\n",
+       " 'edamame',\n",
+       " 'risotto',\n",
+       " 'creme_brulee',\n",
+       " 'chocolate_mousse',\n",
+       " 'onion_rings',\n",
+       " 'hot_and_sour_soup',\n",
+       " 'pizza',\n",
+       " 'hamburger',\n",
+       " 'cannoli',\n",
+       " 'pancakes',\n",
+       " 'shrimp_and_grits',\n",
+       " 'sashimi',\n",
+       " 'lasagna',\n",
+       " 'hummus',\n",
+       " 'oysters',\n",
+       " 'baby_back_ribs',\n",
+       " 'chocolate_cake',\n",
+       " 'guacamole',\n",
+       " 'fish_and_chips',\n",
+       " 'croque_madame',\n",
+       " 'bread_pudding',\n",
+       " 'eggs_benedict',\n",
+       " 'takoyaki',\n",
+       " 'ceviche',\n",
+       " 'spaghetti_carbonara',\n",
+       " 'scallops',\n",
+       " 'spaghetti_bolognese',\n",
+       " 'tuna_tartare',\n",
+       " 'sushi',\n",
+       " 'french_fries',\n",
+       " 'pulled_pork_sandwich',\n",
+       " 'bruschetta',\n",
+       " 'gyoza',\n",
+       " 'spring_rolls',\n",
+       " 'huevos_rancheros',\n",
+       " 'beef_tartare',\n",
+       " 'pho',\n",
+       " 'hot_dog',\n",
+       " 'crab_cakes',\n",
+       " 'cup_cakes',\n",
+       " 'fried_rice',\n",
+       " 'churros',\n",
+       " 'escargots',\n",
+       " 'ramen',\n",
+       " 'foie_gras',\n",
+       " 'chicken_curry',\n",
+       " 'garlic_bread',\n",
+       " 'strawberry_shortcake',\n",
+       " 'tiramisu',\n",
+       " 'clam_chowder',\n",
+       " 'fried_calamari',\n",
+       " 'french_toast',\n",
+       " 'chicken_wings',\n",
+       " 'poutine',\n",
+       " 'dumplings',\n",
+       " 'samosa',\n",
+       " 'steak',\n",
+       " 'gnocchi',\n",
+       " 'macarons',\n",
+       " 'cheesecake',\n",
+       " 'waffles',\n",
+       " 'cheese_plate',\n",
+       " 'nachos',\n",
+       " 'greek_salad',\n",
+       " 'peking_duck',\n",
+       " 'carrot_cake',\n",
+       " 'mussels',\n",
+       " 'breakfast_burrito',\n",
+       " 'filet_mignon',\n",
+       " 'pad_thai',\n",
+       " 'club_sandwich',\n",
+       " 'deviled_eggs',\n",
+       " 'baklava',\n",
+       " 'caprese_salad',\n",
+       " 'seaweed_salad',\n",
+       " 'grilled_salmon',\n",
+       " 'bibimbap',\n",
+       " 'apple_pie',\n",
+       " 'donuts',\n",
+       " 'prime_rib',\n",
+       " 'grilled_cheese_sandwich',\n",
+       " 'miso_soup',\n",
+       " 'pork_chop']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names[0]"
+    "names"
    ]
   },
   {
@@ -5954,7 +6053,7 @@
    "source": [
     "plt.figure(figsize=(8,8))\n",
     "plt.subplot(2,1,1)\n",
-    "plt.title('Sequential-Conv2D simplified model')\n",
+    "plt.title('InceptionV3 model')\n",
     "plt.plot(history.history['accuracy'],'r')\n",
     "plt.ylabel('Accuracy')\n",
     "plt.plot(history.history['val_accuracy'],'y')\n",
