archivos full a trash, lo hago en colab

--- a/src/image_processing_partialV2.ipynb
+++ b/src/image_processing_partialV2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,116 +85,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['lobster_roll_sandwich',\n",
-       " 'beet_salad',\n",
-       " 'red_velvet_cake',\n",
-       " 'falafel',\n",
-       " 'paella',\n",
-       " 'french_onion_soup',\n",
-       " 'caesar_salad',\n",
-       " 'chicken_quesadilla',\n",
-       " 'beef_carpaccio',\n",
-       " 'macaroni_and_cheese',\n",
-       " 'lobster_bisque',\n",
-       " 'ice_cream',\n",
-       " 'omelette',\n",
-       " 'frozen_yogurt',\n",
-       " 'panna_cotta',\n",
-       " 'beignets',\n",
-       " 'ravioli',\n",
-       " 'tacos',\n",
-       " 'edamame',\n",
-       " 'risotto',\n",
-       " 'creme_brulee',\n",
-       " 'chocolate_mousse',\n",
-       " 'onion_rings',\n",
-       " 'hot_and_sour_soup',\n",
-       " 'pizza',\n",
-       " 'hamburger',\n",
-       " 'cannoli',\n",
-       " 'pancakes',\n",
-       " 'shrimp_and_grits',\n",
-       " 'sashimi',\n",
-       " 'lasagna',\n",
-       " 'hummus',\n",
-       " 'oysters',\n",
+       "['apple_pie',\n",
        " 'baby_back_ribs',\n",
-       " 'chocolate_cake',\n",
-       " 'guacamole',\n",
-       " 'fish_and_chips',\n",
-       " 'croque_madame',\n",
-       " 'bread_pudding',\n",
-       " 'eggs_benedict',\n",
-       " 'takoyaki',\n",
-       " 'ceviche',\n",
-       " 'spaghetti_carbonara',\n",
-       " 'scallops',\n",
-       " 'spaghetti_bolognese',\n",
-       " 'tuna_tartare',\n",
-       " 'sushi',\n",
-       " 'french_fries',\n",
-       " 'pulled_pork_sandwich',\n",
-       " 'bruschetta',\n",
-       " 'gyoza',\n",
-       " 'spring_rolls',\n",
-       " 'huevos_rancheros',\n",
-       " 'beef_tartare',\n",
-       " 'pho',\n",
-       " 'hot_dog',\n",
-       " 'crab_cakes',\n",
-       " 'cup_cakes',\n",
-       " 'fried_rice',\n",
-       " 'churros',\n",
-       " 'escargots',\n",
-       " 'ramen',\n",
-       " 'foie_gras',\n",
-       " 'chicken_curry',\n",
-       " 'garlic_bread',\n",
-       " 'strawberry_shortcake',\n",
-       " 'tiramisu',\n",
-       " 'clam_chowder',\n",
-       " 'fried_calamari',\n",
-       " 'french_toast',\n",
-       " 'chicken_wings',\n",
-       " 'poutine',\n",
-       " 'dumplings',\n",
-       " 'samosa',\n",
-       " 'steak',\n",
-       " 'gnocchi',\n",
-       " 'macarons',\n",
-       " 'cheesecake',\n",
-       " 'waffles',\n",
-       " 'cheese_plate',\n",
-       " 'nachos',\n",
-       " 'greek_salad',\n",
-       " 'peking_duck',\n",
-       " 'carrot_cake',\n",
-       " 'mussels',\n",
-       " 'breakfast_burrito',\n",
-       " 'filet_mignon',\n",
-       " 'pad_thai',\n",
-       " 'club_sandwich',\n",
-       " 'deviled_eggs',\n",
        " 'baklava',\n",
-       " 'caprese_salad',\n",
-       " 'seaweed_salad',\n",
-       " 'grilled_salmon',\n",
+       " 'beef_carpaccio',\n",
+       " 'beef_tartare',\n",
+       " 'beet_salad',\n",
+       " 'beignets',\n",
        " 'bibimbap',\n",
-       " 'apple_pie',\n",
+       " 'bread_pudding',\n",
+       " 'breakfast_burrito',\n",
+       " 'bruschetta',\n",
+       " 'caesar_salad',\n",
+       " 'cannoli',\n",
+       " 'caprese_salad',\n",
+       " 'carrot_cake',\n",
+       " 'ceviche',\n",
+       " 'cheese_plate',\n",
+       " 'cheesecake',\n",
+       " 'chicken_curry',\n",
+       " 'chicken_quesadilla',\n",
+       " 'chicken_wings',\n",
+       " 'chocolate_cake',\n",
+       " 'chocolate_mousse',\n",
+       " 'churros',\n",
+       " 'clam_chowder',\n",
+       " 'club_sandwich',\n",
+       " 'crab_cakes',\n",
+       " 'creme_brulee',\n",
+       " 'croque_madame',\n",
+       " 'cup_cakes',\n",
+       " 'deviled_eggs',\n",
        " 'donuts',\n",
-       " 'prime_rib',\n",
+       " 'dumplings',\n",
+       " 'edamame',\n",
+       " 'eggs_benedict',\n",
+       " 'escargots',\n",
+       " 'falafel',\n",
+       " 'filet_mignon',\n",
+       " 'fish_and_chips',\n",
+       " 'foie_gras',\n",
+       " 'french_fries',\n",
+       " 'french_onion_soup',\n",
+       " 'french_toast',\n",
+       " 'fried_calamari',\n",
+       " 'fried_rice',\n",
+       " 'frozen_yogurt',\n",
+       " 'garlic_bread',\n",
+       " 'gnocchi',\n",
+       " 'greek_salad',\n",
        " 'grilled_cheese_sandwich',\n",
+       " 'grilled_salmon',\n",
+       " 'guacamole',\n",
+       " 'gyoza',\n",
+       " 'hamburger',\n",
+       " 'hot_and_sour_soup',\n",
+       " 'hot_dog',\n",
+       " 'huevos_rancheros',\n",
+       " 'hummus',\n",
+       " 'ice_cream',\n",
+       " 'lasagna',\n",
+       " 'lobster_bisque',\n",
+       " 'lobster_roll_sandwich',\n",
+       " 'macaroni_and_cheese',\n",
+       " 'macarons',\n",
        " 'miso_soup',\n",
-       " 'pork_chop']"
+       " 'mussels',\n",
+       " 'nachos',\n",
+       " 'omelette',\n",
+       " 'onion_rings',\n",
+       " 'oysters',\n",
+       " 'pad_thai',\n",
+       " 'paella',\n",
+       " 'pancakes',\n",
+       " 'panna_cotta',\n",
+       " 'peking_duck',\n",
+       " 'pho',\n",
+       " 'pizza',\n",
+       " 'pork_chop',\n",
+       " 'poutine',\n",
+       " 'prime_rib',\n",
+       " 'pulled_pork_sandwich',\n",
+       " 'ramen',\n",
+       " 'ravioli',\n",
+       " 'red_velvet_cake',\n",
+       " 'risotto',\n",
+       " 'samosa',\n",
+       " 'sashimi',\n",
+       " 'scallops',\n",
+       " 'seaweed_salad',\n",
+       " 'shrimp_and_grits',\n",
+       " 'spaghetti_bolognese',\n",
+       " 'spaghetti_carbonara',\n",
+       " 'spring_rolls',\n",
+       " 'steak',\n",
+       " 'strawberry_shortcake',\n",
+       " 'sushi',\n",
+       " 'tacos',\n",
+       " 'takoyaki',\n",
+       " 'tiramisu',\n",
+       " 'tuna_tartare',\n",
+       " 'waffles']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
