image_prediction kernel restarted

--- a/src/image_prediction.ipynb
+++ b/src/image_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,6 @@
     "from shutil import copytree, rmtree\n",
     "from PIL import Image\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
-    "from keras.preprocessing import image as tfimage\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Model"
@@ -29,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -216,13 +215,7 @@
       "Copying  ../input/images/tacos/975974.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/tacos/2565813.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/tacos/3254037.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/tacos/535381.jpg into ../output/images/test_part\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Copying  ../input/images/tacos/535381.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/tacos/3826428.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/tacos/3650822.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/tacos/784510.jpg into ../output/images/test_part\n",
@@ -288,7 +281,13 @@
       "Copying  ../input/images/tacos/63099.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/tacos/3300773.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/tacos/2125477.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/tacos/3304032.jpg into ../output/images/test_part\n",
+      "Copying  ../input/images/tacos/3304032.jpg into ../output/images/test_part\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Copying  ../input/images/tacos/20787.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/tacos/158880.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/tacos/537488.jpg into ../output/images/test_part\n",
@@ -350,13 +349,7 @@
       "Copying  ../input/images/pizza/397910.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/pizza/3475871.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/pizza/204151.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/pizza/1060407.jpg into ../output/images/test_part\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Copying  ../input/images/pizza/1060407.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/pizza/573054.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/pizza/565112.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/pizza/800546.jpg into ../output/images/test_part\n",
@@ -479,13 +472,7 @@
       "Copying  ../input/images/pizza/177513.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/pizza/398345.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/pizza/1512557.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/pizza/376625.jpg into ../output/images/test_part\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Copying  ../input/images/pizza/376625.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/pizza/1106738.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/pizza/3430418.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/pizza/849291.jpg into ../output/images/test_part\n",
@@ -502,7 +489,13 @@
       "Copying  ../input/images/pizza/1001116.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/pizza/1555015.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/pizza/556507.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/pizza/2521769.jpg into ../output/images/test_part\n",
+      "Copying  ../input/images/pizza/2521769.jpg into ../output/images/test_part\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Copying  ../input/images/pizza/1275885.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/pizza/1503858.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/pizza/1895182.jpg into ../output/images/test_part\n",
@@ -611,13 +604,7 @@
       "Copying  ../input/images/hamburger/272642.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/1679008.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/3673989.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/hamburger/78997.jpg into ../output/images/test_part\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Copying  ../input/images/hamburger/78997.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/922386.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/3156785.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/166940.jpg into ../output/images/test_part\n",
@@ -715,7 +702,13 @@
       "Copying  ../input/images/hamburger/510448.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/2232379.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/950766.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/hamburger/337374.jpg into ../output/images/test_part\n",
+      "Copying  ../input/images/hamburger/337374.jpg into ../output/images/test_part\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Copying  ../input/images/hamburger/1071442.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/1253144.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/360082.jpg into ../output/images/test_part\n",
@@ -747,13 +740,7 @@
       "Copying  ../input/images/hamburger/217855.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/3244630.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/2745577.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/hamburger/708454.jpg into ../output/images/test_part\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Copying  ../input/images/hamburger/708454.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/1398841.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/3508112.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/1964319.jpg into ../output/images/test_part\n",
@@ -835,7 +822,13 @@
       "Copying  ../input/images/hamburger/1447114.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/1175221.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/3228181.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/hamburger/1234438.jpg into ../output/images/test_part\n",
+      "Copying  ../input/images/hamburger/1234438.jpg into ../output/images/test_part\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Copying  ../input/images/hamburger/2906568.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/2200084.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/hamburger/607907.jpg into ../output/images/test_part\n",
@@ -889,13 +882,7 @@
       "Copying  ../input/images/spaghetti_bolognese/2798243.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/3699254.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/2712037.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/spaghetti_bolognese/3019436.jpg into ../output/images/test_part\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Copying  ../input/images/spaghetti_bolognese/3019436.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/2819261.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/844903.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/3659120.jpg into ../output/images/test_part\n",
@@ -946,7 +933,13 @@
       "Copying  ../input/images/spaghetti_bolognese/1700784.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/1932824.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/3398111.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/spaghetti_bolognese/506818.jpg into ../output/images/test_part\n",
+      "Copying  ../input/images/spaghetti_bolognese/506818.jpg into ../output/images/test_part\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Copying  ../input/images/spaghetti_bolognese/1967738.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/1147772.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/3138635.jpg into ../output/images/test_part\n",
@@ -1012,13 +1005,7 @@
       "Copying  ../input/images/spaghetti_bolognese/2644877.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/308553.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/3087717.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/spaghetti_bolognese/2621372.jpg into ../output/images/test_part\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Copying  ../input/images/spaghetti_bolognese/2621372.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/276946.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/1331633.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/3200706.jpg into ../output/images/test_part\n",
@@ -1048,7 +1035,13 @@
       "Copying  ../input/images/spaghetti_bolognese/2590893.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/1104453.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/2203864.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/spaghetti_bolognese/2423175.jpg into ../output/images/test_part\n",
+      "Copying  ../input/images/spaghetti_bolognese/2423175.jpg into ../output/images/test_part\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Copying  ../input/images/spaghetti_bolognese/2320642.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/1119072.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/spaghetti_bolognese/1327365.jpg into ../output/images/test_part\n",
@@ -1149,15 +1142,15 @@
       "Copying  ../input/images/sushi/1358203.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/sushi/472912.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/sushi/1302764.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/sushi/720302.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/sushi/592799.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/sushi/3322020.jpg into ../output/images/test_part\n"
+      "Copying  ../input/images/sushi/720302.jpg into ../output/images/test_part\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Copying  ../input/images/sushi/592799.jpg into ../output/images/test_part\n",
+      "Copying  ../input/images/sushi/3322020.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/sushi/3803301.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/sushi/3292104.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/sushi/705150.jpg into ../output/images/test_part\n",
@@ -1290,13 +1283,7 @@
       "Copying  ../input/images/sushi/2238477.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/sushi/2803690.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/sushi/89467.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/sushi/402797.jpg into ../output/images/test_part\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Copying  ../input/images/sushi/402797.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/sushi/389730.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/sushi/2490186.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/sushi/2903125.jpg into ../output/images/test_part\n",
@@ -1373,7 +1360,13 @@
       "Copying  ../input/images/sushi/499605.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/sushi/2948087.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/sushi/625854.jpg into ../output/images/test_part\n",
-      "Copying  ../input/images/sushi/1392674.jpg into ../output/images/test_part\n",
+      "Copying  ../input/images/sushi/1392674.jpg into ../output/images/test_part\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Copying  ../input/images/sushi/2540511.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/sushi/894318.jpg into ../output/images/test_part\n",
       "Copying  ../input/images/sushi/72304.jpg into ../output/images/test_part\n",
@@ -1401,12 +1394,12 @@
     }
    ],
    "source": [
-    "pictures_to_dir(source=\"../input/images/\",dest=\"../output/images/test_part\",names=names,txt='../input/meta/meta/test.txt')"
+    "pictures_to_dir(source=\"../input/images/\",dest=\"../output/images/test_part\",names=names,txt='../input/meta/meta/test.txt');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1415,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2137,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -2164,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -2173,22 +2166,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-10-14 14:15:13--  https://t1.rg.ltmcdn.com/es/images/1/5/2/img_tacos_de_lengua_asada_63251_600_square.jpg\n",
-      "Resolving t1.rg.ltmcdn.com (t1.rg.ltmcdn.com)... 185.93.3.18\n",
-      "Connecting to t1.rg.ltmcdn.com (t1.rg.ltmcdn.com)|185.93.3.18|:443... connected.\n",
+      "--2020-10-14 14:24:23--  https://www.hola.com/imagenes/cocina/recetas/20190710145612/tacos-ternera-queso-espinacas/0-700-318/tacos-ternera-m.jpg\n",
+      "Resolving www.hola.com (www.hola.com)... 23.216.99.97\n",
+      "Connecting to www.hola.com (www.hola.com)|23.216.99.97|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 62341 (61K) [image/jpeg]\n",
+      "Length: 262581 (256K) [image/jpeg]\n",
       "Saving to: ‘downloads/image.jpg’\n",
       "\n",
-      "downloads/image.jpg 100%[===================>]  60,88K  --.-KB/s    in 0,01s   \n",
+      "downloads/image.jpg 100%[===================>] 256,43K  --.-KB/s    in 0,08s   \n",
       "\n",
-      "2020-10-14 14:15:13 (5,25 MB/s) - ‘downloads/image.jpg’ saved [62341/62341]\n",
+      "2020-10-14 14:24:24 (2,97 MB/s) - ‘downloads/image.jpg’ saved [262581/262581]\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "!wget -O downloads/image.jpg https://t1.rg.ltmcdn.com/es/images/1/5/2/img_tacos_de_lengua_asada_63251_600_square.jpg"
+    "!wget -O downloads/image.jpg https://www.hola.com/imagenes/cocina/recetas/20190710145612/tacos-ternera-queso-espinacas/0-700-318/tacos-ternera-m.jpg"
    ]
   },
   {
@@ -2200,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2213,7 +2206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2234,7 +2227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2243,7 +2236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2252,7 +2245,7 @@
        "'tacos'"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2267,18 +2260,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
   }
  },
  "nbformat": 4,
